// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableAnt should render a table with content by default 1`] = `
<Fragment>
  <Table
    bordered={false}
    className=""
    columns={
      Array [
        Object {
          "column": "email",
          "dataIndex": "email",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "email",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "E-Mail",
          "width": undefined,
        },
        Object {
          "column": "fullName",
          "dataIndex": "fullName",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "fullName",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "Full Name",
          "width": undefined,
        },
        Object {
          "column": "createdAt",
          "dataIndex": "createdAt",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "createdAt",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "Joined",
          "width": undefined,
        },
      ]
    }
    dataSource={
      Array [
        Object {
          "_id": "1",
          "createdAt": "2018-01-01",
          "email": "john@doe.com",
          "fullName": "John Doe",
          "key": "0",
        },
        Object {
          "_id": "2",
          "createdAt": "2018-05-01",
          "email": "johanna@yahoo.com",
          "fullName": "Johanna Doe",
          "key": "1",
        },
        Object {
          "_id": "3",
          "createdAt": "2018-10-01",
          "email": "jake@gmail.com",
          "fullName": "Jake Doe",
          "key": "2",
        },
        Object {
          "_id": "4",
          "createdAt": "2017-13-07",
          "email": "max@mustermann.com",
          "fullName": "Max Mustermann",
          "key": "3",
        },
      ]
    }
    indentSize={20}
    loading={false}
    locale={Object {}}
    onChange={[Function]}
    rowKey="key"
    scroll={
      Object {
        "x": 1500,
      }
    }
    showHeader={true}
    size="default"
    sortDirections={
      Array [
        "ascend",
        "descend",
      ]
    }
    useFixedHeader={false}
  />
</Fragment>
`;

exports[`TableAnt should render a table with search field and pagination 1`] = `
<Fragment>
  <TextSearchAnt
    enterButton="Search"
    onSearch={[Function]}
    operation="bound TextImpl"
    required={true}
    style={
      Object {
        "marginBottom": "1.5em",
      }
    }
  />
  <Table
    bordered={false}
    className=""
    columns={
      Array [
        Object {
          "column": "email",
          "dataIndex": "email",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "email",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "E-Mail",
          "width": undefined,
        },
        Object {
          "column": "fullName",
          "dataIndex": "fullName",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "fullName",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "Full Name",
          "width": undefined,
        },
        Object {
          "column": "createdAt",
          "dataIndex": "createdAt",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "createdAt",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "Joined",
          "width": undefined,
        },
      ]
    }
    dataSource={
      Array [
        Object {
          "_id": "1",
          "createdAt": "2018-01-01",
          "email": "john@doe.com",
          "fullName": "John Doe",
          "key": "0",
        },
        Object {
          "_id": "2",
          "createdAt": "2018-05-01",
          "email": "johanna@yahoo.com",
          "fullName": "Johanna Doe",
          "key": "1",
        },
        Object {
          "_id": "3",
          "createdAt": "2018-10-01",
          "email": "jake@gmail.com",
          "fullName": "Jake Doe",
          "key": "2",
        },
        Object {
          "_id": "4",
          "createdAt": "2017-13-07",
          "email": "max@mustermann.com",
          "fullName": "Max Mustermann",
          "key": "3",
        },
      ]
    }
    indentSize={20}
    loading={false}
    locale={Object {}}
    onChange={[Function]}
    pagination={
      Object {
        "pageSizeOptions": Array [
          "10",
          "25",
          "50",
          "100",
        ],
        "showQuickJumper": true,
        "showSizeChanger": true,
        "total": 4,
      }
    }
    rowKey="key"
    scroll={
      Object {
        "x": 1500,
      }
    }
    showHeader={true}
    size="default"
    sortDirections={
      Array [
        "ascend",
        "descend",
      ]
    }
    useFixedHeader={false}
  />
</Fragment>
`;

exports[`TableAnt should render a table with setupColumn set 1`] = `
<Fragment>
  <Table
    bordered={false}
    className=""
    columns={
      Array [
        Object {
          "column": "email",
          "dataIndex": "email",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "email",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "E-Mail",
          "width": undefined,
        },
        Object {
          "column": "fullName",
          "dataIndex": "fullName",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "fullName",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "Full Name",
          "width": undefined,
        },
        Object {
          "column": "createdAt",
          "dataIndex": "createdAt",
          "defaultSortOrder": "descend",
          "fixed": undefined,
          "key": "createdAt",
          "render": [Function],
          "sortOrder": false,
          "sorter": true,
          "title": "Joined",
          "width": undefined,
        },
      ]
    }
    dataSource={
      Array [
        Object {
          "_id": "1",
          "createdAt": "2018-01-01",
          "email": "john@doe.com",
          "fullName": "John Doe",
          "key": "0",
        },
        Object {
          "_id": "2",
          "createdAt": "2018-05-01",
          "email": "johanna@yahoo.com",
          "fullName": "Johanna Doe",
          "key": "1",
        },
        Object {
          "_id": "3",
          "createdAt": "2018-10-01",
          "email": "jake@gmail.com",
          "fullName": "Jake Doe",
          "key": "2",
        },
        Object {
          "_id": "4",
          "createdAt": "2017-13-07",
          "email": "max@mustermann.com",
          "fullName": "Max Mustermann",
          "key": "3",
        },
      ]
    }
    indentSize={20}
    loading={false}
    locale={Object {}}
    onChange={[Function]}
    rowKey="key"
    scroll={
      Object {
        "x": 1500,
      }
    }
    setupColumn={[Function]}
    showHeader={true}
    size="default"
    sortDirections={
      Array [
        "ascend",
        "descend",
      ]
    }
    useFixedHeader={false}
  />
</Fragment>
`;
